--- a/dev/tutorials/back-end/.prettierrc
+++ b/dev/tutorials/back-end/.prettierrc
@@ -2,5 +2,6 @@
   "tabWidth": 2,
   "singleQuote": true,
   "semi": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine": "auto"
 }
