event se rend pas au client

--- a/C61/sprint1/doc/the-last-stand-v2/package.json
+++ b/C61/sprint1/doc/the-last-stand-v2/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
+    "@colyseus/command": "^0.2.1",
     "@colyseus/monitor": "^0.14.20",
     "autoprefixer": "^10.4.13",
     "colyseus": "^0.14.20",
