--- a/C61/sprint1/doc/the-last-stand-v2/package.json
+++ b/C61/sprint1/doc/the-last-stand-v2/package.json
@@ -21,6 +21,8 @@
     "colyseus.js": "^0.14.13",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "phaser": "^3.55.2",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
@@ -35,6 +37,8 @@
     "@types/express": "^4.17.17",
     "@types/mocha": "^8.2.3",
     "@types/node": "*",
+    "@types/passport": "^1.0.12",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
