--- a/C61/sprint1/doc/the-last-stand/package.json
+++ b/C61/sprint1/doc/the-last-stand/package.json
@@ -37,7 +37,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
     "@types/mocha": "^8.2.3",
-    "@types/node": "*",
+    "@types/node": "^18.14.6",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/react": "^18.0.28",
