Trying to make tailwind work

--- a/C61/sprint1/doc/the-last-stand/package.json
+++ b/C61/sprint1/doc/the-last-stand/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^18.14.6",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/postcss-import": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^9.0.2",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
     "rimraf": "^2.7.1",
     "ts-node": "^10.9.1",
