--- a/C61/sprint1/doc/the-last-stand/package.json
+++ b/C61/sprint1/doc/the-last-stand/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "tw": "tailwindcss -i src/client/styles/tw.css -o src/client/styles/tailwind.css",
     "client": "vite",
     "server": "ts-node-dev --respawn --transpile-only --project tsconfig.server.json src/server/index.ts",
     "build": "tsc && vite build",
@@ -17,7 +18,6 @@
     "@colyseus/arena": "^0.14.22",
     "@colyseus/command": "^0.2.1",
     "@colyseus/monitor": "^0.14.20",
-    "autoprefixer": "^10.4.13",
     "colyseus": "^0.14.20",
     "colyseus.js": "^0.14.13",
     "cors": "^2.8.5",
@@ -25,11 +25,9 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "phaser": "^3.55.2",
-    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "tailwindcss": "^3.2.7"
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@colyseus/loadtest": "^0.14.4",
@@ -40,12 +38,12 @@
     "@types/node": "^18.14.6",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
-    "@types/postcss-import": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
     "copyfiles": "^2.4.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
@@ -54,12 +52,15 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^9.0.2",
-    "postcss-import": "^15.1.0",
+    "postcss-cli": "^10.1.0",
     "prettier": "^2.8.4",
     "rimraf": "^2.7.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.9.5",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-env-compatible": "^1.1.1"
   }
 }
