--- a/C61/sprint1/doc/the-last-stand/package.json
+++ b/C61/sprint1/doc/the-last-stand/package.json
@@ -21,6 +21,7 @@
     "colyseus.js": "^0.14.13",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "phaser": "^3.55.2",
