Working on auth

--- a/C61/sprint1/doc/the-last-stand/package.json
+++ b/C61/sprint1/doc/the-last-stand/package.json
@@ -19,9 +19,11 @@
     "@colyseus/monitor": "^0.14.20",
     "colyseus": "^0.14.20",
     "colyseus.js": "^0.14.13",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.17.3",
+    "mongodb": "^5.1.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "phaser": "^3.55.2",
@@ -34,6 +36,7 @@
     "@colyseus/testing": "^0.14.21",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.6",
     "@types/mocha": "^8.2.3",
     "@types/node": "^18.14.6",
     "@types/passport": "^1.0.12",
