--- a/dev/the-last-stand/.yarnrc.yml
+++ b/dev/the-last-stand/.yarnrc.yml
@@ -1,1 +1,6 @@
+# Nom du fichier : .yarnrc.yml
+# Contexte : Un fichier de type yml qui permet d'établir les configurations de yarn
+# Nom de l'auteur : Yarn
+# Autres étudiants : Jonathan Robinson,Andrzej Wisniowski
+
 nodeLinker: node-modules
