Reformatted env example

--- a/dev/the-last-stand/.env_example
+++ b/dev/the-last-stand/.env_example
@@ -16,6 +16,8 @@ HOST_NAME='localhost:' HOST_URL='http://localhost' HOST_PORT=80 PORT=80 # GOTTA 
 
 MONGO_URI=mongodb+srv://ClusterExampleUser:Lag5W1QCLmuaGNT7@clusterexample.nd0hzpg.mongodb.net/tls?retryWrites=true&w=majority
 
-GOOGLE_CLIENT_ID=244803391403-4iva6gj434g5qodmg4dahbcus38b7f07.apps.googleusercontent.com GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=244803391403-4iva6gj434g5qodmg4dahbcus38b7f07.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=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
 
 SESSION_SECRET=YourOwnSessionSecretHere
