--- a/dev/the-last-stand/.env_example
+++ b/dev/the-last-stand/.env_example
@@ -6,11 +6,21 @@ APP_MODE='dev'
 
 # Guest info:
 
-CLIENT_NAME='localhost' CLIENT_URL='http://localhost' CLIENT_PORT=5173
+CLIENT_NAME='localhost'
+
+CLIENT_URL='http://localhost'
+
+CLIENT_PORT=5173
 
 # Host info:
 
-HOST_NAME='localhost:' HOST_URL='http://localhost' HOST_PORT=80 PORT=80 # GOTTA KEEP THIS DOUBLED UP FOR COLYSEUS TO POINT TO THE PORT VARIABLE
+HOST_NAME='localhost:'
+
+HOST_URL='http://localhost'
+
+HOST_PORT=80
+
+PORT=80 # GOTTA KEEP THIS DOUBLED UP FOR COLYSEUS TO POINT TO THE PORT VARIABLE
 
 # INVARIABLES:
 
